<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/recipe_details_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/recipe_details_background">

        <ImageView
            android:id="@+id/ivRecipeDetails"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <ScrollView
            android:id="@+id/detailsScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/details_content_padding">

                <TextView
                    android:id="@+id/tvRecipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_name"
                    style="@style/RecipeDetailsName"/>

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    style="@style/RecipeDetailsCategory"/>

                <TextView
                    android:id="@+id/tvArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cuisine"
                    style="@style/RecipeDetailsCuisine"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    style="@style/RecipeDetailsIngredientsTitle"/>

                <TextView
                    android:id="@+id/tvIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    style="@style/RecipeDetailsContent"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cooking_instructions"
                    style="@style/RecipeDetailsInstructionsTitle"/>

                <TextView
                    android:id="@+id/tvInstructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cooking_instructions_placeholder"
                    style="@style/RecipeDetailsInstructionsContent"/>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="@dimen/details_back_margin_start"
        android:layout_marginTop="@dimen/details_back_margin_top"
        android:text="@string/back"

        style="@style/RecipeDetailsBackButton"/>

    <ProgressBar
        android:id="@+id/progressBarDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</FrameLayout>